# damage

./: .gitignore  404.html  LICENCE.md  README.md  fcheck.py  index.html  mgen.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.html  setup.py  sitemap.xml  stc_manifest_generator.py
api_reference/: index.html
binaries/: README.md  damage.exe.sha256  damage.sha256  stcman
building_damage_binary/: index.html
building_damage_gui_app/: index.html
credits/: index.html
css/: extra.css
docs/: How_to_Compile.md  api_reference.md  building_damage_binary.md  building_damage_gui_app.md  credits.md  extra.css  faq.md  how_to_use_damage.md  how_to_use_gui_damage.md  index.md
faq/: index.html
gui/: customize_pyinstaller_plist.py  damage_gui.spec  damage_gui_combined.spec  damage_gui_mac.spec
gui/assets/: DamageAppIcon.icns
gui/src/: damage_gui.py
how_to_use_damage/: index.html
how_to_use_gui_damage/: index.html
py_install/: README.md  hook-fcheck.py
pyinstaller/gui/: Damage.spec  customize_pyinstaller_plist.py  damage_gui.spec.windowed  damage_gui_pc.spec
scripts/: damage.py  damage_gui.py
search/: search_index.json
src/damage/: __init__.py
src/damage/console/: damage_cmd.py
src/damage/gui/: damage_gui.py
src/damage/gui/assets/: LICENCE.txt
src/damage/scripts/: damage.py  damage_cmd.py
tests/data/: CIS2022_PUMF_10cases.csv  CIS2022_PUMF_10cases.txt  Readme.txt  cis_2022_pumf_10cases.sav  cis_2022_pumf_v1_10cases.dta
