[build-system]
# Minimum requirements for the build system to execute.
requires = ['setuptools>=61', 'setuptools_scm[toml]>=6.2']  # PEP 508 specifications.
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['src']  # list of folders that contain the packages (['.'] by default)
include = ['[dgsa]*']  # package names should match these glob patterns (['*'] by default)
exclude = ['tests*']  # exclude packages matching these glob patterns (empty by default)
#namespaces = false # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.package-data]
"*" = ['*icns', '*ico', '*jpg', '*png', '*db', '*encryptable']

[tool.setuptools.dynamic]
version = {attr = 'damage.VERSION'}
dependencies = {file = 'requirements.txt'}

[project]
name = 'damage'
description = 'File manifest generator and python package for statistical data files and documentation'
readme = 'README.md'
keywords =['metadata','SAS', 'SPSS', 'Stata', 'rectangular files', 'manifest generator']
authors = [{name='Paul Lesack', email='paul.lesack@ubc.ca'}]
classifiers = ['Development Status :: 4 - Beta',
			   'Environment :: Console',
			   'Environment :: MacOS X',
			   'Environment :: Win32 (MS Windows)',
			   'Environment :: X11 Applications',
			   'Intended Audience :: Education',
			   'License :: OSI Approved :: MIT License',
			   'Topic :: Education',
			   'Topic :: Utilities']
requires-python = '>=3.6'
dynamic = ['version', 'dependencies']

#optional-dependencies = {server = ['psycopg2-binary']} #or as below
[project.optional-dependencies]
#gui = ['pysimplegui']

[tools.setuptools]
license-files = ['LICEN[CS]*']

[project.urls]
Homepage = 'https://ubc-library-rc.github.io/damage'
#Documentation = 'https://ubc-library-rc.github.io/damage'
Repository = 'https://github.com/ubc-library-rc/damage.git'
'Issue Tracker' = 'https://github.com/ubc-library-rc/damage/issues'
#changelog = 'https://github.com/me/spam/blob/master/CHANGELOG.md'

[project.scripts]
#This should be restructured one day
damage = 'damage.scripts.damage:main'


[project.gui-scripts]
damage-gui = 'damage.gui.damage_gui:main'
