[project]
name = "damage"
version = "0.5.7a2"
description = "File manifest generator and python package for statistical data files and documentation'"
authors = [
    {name = "Paul Lesack",email = "paul.lesack@ubc.ca"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12, <4"
dependencies = [
    "freesimplegui (>=5.2.0,<6.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "pyreadstat (>=1.3.3,<2.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "charset-normalizer (>=3.4.6,<4.0.0)",
]
keywords =["metadata","SAS", "SPSS", "Stata", "rectangular files", "manifest generator"]

[project.urls]
homepage = "https://ubc-library-rc.github.io/damage"
repository = "https://github.com/ubc-library-rc/damage"
"Issue Tracker" = "https://github.com/ubc-library-rc/damage/issues"

[tool.poetry]
packages = [{"include" = "damage", "from"="src"}]
classifiers = ["Development Status :: 4 - Beta",
			   "Environment :: Console",
			   "Environment :: MacOS X",
			   "Environment :: Win32 (MS Windows)",
			   "Environment :: X11 Applications",
			   "Intended Audience :: Education",
			   "License :: OSI Approved :: MIT License",
			   "Topic :: Education",
			   "Topic :: Utilities"]

[project.scripts]
damage = "damage.console.damage_cmd:main"
damage-gui = "damage.gui.damage_gui:main"

#windows only?
[project.gui-scripts]
damage-gui = "damage.gui.damage_gui:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
